Offline pulls and db transformations (#81) (#92)
* new DB schema

* offline pulls

* manual SQL selects