@@ -69,4 +69,14 @@ configure(subprojects.filterNot(project(":web")::equals)) {
             finalizedBy(jacocoTestReport)
         }
     }
+
+    tasks.withType<JavaCompile> {
+        options.compilerArgs.add("--enable-preview")
+    }
+    tasks.withType<Test> {
+        jvmArgs("--enable-preview")
+    }
+    tasks.withType<JavaExec> {
+        jvmArgs("--enable-preview")
+    }
 }
